--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Kawalovers</title>
     <link rel="stylesheet" href="./css/styles.css">
     <link rel="icon" href="./img/Kawalovers K.L..png" type="image/x-icon">
+    <link href="https://emoji-css.afeld.me/emoji.css" rel="stylesheet">
 
 </head>
 
@@ -54,7 +55,7 @@
     <div class="contenedorcentral">
 
         <div class="tituloimg">
-            <h2 class="h2estilo">En Kawalovers tenemos el estilo que siempre soñaste</h2>
+            <h2 class="h2estilo">En Kawalovers tenemos el estilo que siempre soñaste <i class="em em-sunglasses" aria-role="presentation" aria-label="SMILING FACE WITH SUNGLASSES"></i></h2>
         </div>
 
         <div class="imgindex">
