--- a/pages/catalogo.html
+++ b/pages/catalogo.html
@@ -12,7 +12,7 @@
 <body>
 
     <header>
-        <div class="positionfixcatalogo">
+        <div class="cajaheder">
             <div>
                 <img class="logo" src="../img/Kawalovers K.L..png">
 
