--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -12,7 +12,7 @@
 
 
     <header>
-        <div class="positionfix">
+        <div class="cajaheder">
             <div>
                 <img class="logo" src="../img/Kawalovers K.L..png">
 
