--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -11,7 +11,7 @@
 <body>
 
     <header>
-        <div class="positionfixcatalogo">
+        <div class="cajaheder">
             <div> <!-- revisar si el div es necesario o no-->
                 <img class="logo" src="../img/Kawalovers K.L..png">
 
