--- a/index.html
+++ b/index.html
@@ -123,7 +123,17 @@
             <a href="./pages/catalogo.html#choper" class="linkimgp">Ver Catálogo</a>
 
         </div>
+
+        <div class="tituloaccesorios">
+            <h3>Tambien puedes visitar nuestro catálogo de ropa y accesorios!!! </h3>
+            <a class="linkropa" href="./pages/catalogo.html#catalogoropa"> Visita nuestra ropa y accesorios haciendo click aqui!!</a>
+        </div>
+
+
+
     </div>
+
+   
 
 
 
