--- a/pages/catalogo.html
+++ b/pages/catalogo.html
@@ -45,7 +45,7 @@
     </div>
 
     <div class="titulovehiculos">
-        <h2 class="h2estilo">Catálogo de vehiculos</h2>
+        <h2 class="h2estilo">Catálogo de vehículos</h2>
     </div>
 
     <section class="catalogo">
@@ -225,12 +225,18 @@
         <h2 class="h2estilo">Conoce la ropa y accesorios que tenemos para ti</h2>
     </div>
 
-    <section class="gridropa">
+    <section class="gridropa" id="catalogoropa">
 
         <div class="cajaropa">
             <img class="imagenes" src="../img/ropacatalogo1.png">
             <div class="descripcionropa">
                 <p>Polera kawasaki Monster energi </p>
+                <h4>Selecciona tu talla</h4>
+                <select>
+                    <option value="">M</option>
+                    <option value="">L</option>
+                    <option value="">XL</option>
+                </select>
             </div>
         </div>
 
@@ -238,6 +244,12 @@
             <img class="imagenes" src="../img/ropacatalogo2-removebg-preview.png">
             <div class="descripcionropa">
                 Polera kawasaki sport
+                <h4>Selecciona tu talla</h4>
+                <select>
+                    <option value="">M</option>
+                    <option value="">L</option>
+                    <option value="">XL</option>
+                </select>
             </div>
         </div>
 
@@ -245,6 +257,12 @@
             <img class="imagenes" src="../img/ropacatalogo3-removebg-preview.png">
             <div class="descripcionropa">
                 Polera kawasaki negra logo rojo
+                <h4>Selecciona tu talla</h4>
+                <select>
+                    <option value="">M</option>
+                    <option value="">L</option>
+                    <option value="">XL</option>
+                </select>
             </div>
         </div>
 
@@ -252,6 +270,12 @@
             <img class="imagenes" src="../img/ropacatalogo4-removebg-preview.png">
             <div class="descripcionropa">
                 Polera kawasaki racing team blanco
+                <h4>Selecciona tu talla</h4>
+                <select>
+                    <option value="">M</option>
+                    <option value="">L</option>
+                    <option value="">XL</option>
+                </select>
             </div>
         </div>
 
@@ -259,6 +283,12 @@
             <img class="imagenes" src="../img/gorrocatalogo1.jpg">
             <div class="descripcionropa">
                 Gorro kawasaki / fox negro
+                <h4>Selecciona tu talla</h4>
+                <select>
+                    <option value="">M</option>
+                    <option value="">L</option>
+                    <option value="">XL</option>
+                </select>
             </div>
         </div>
 
@@ -266,6 +296,12 @@
             <img class="imagenes" src="../img/gorrocatalogo2.jpg">
             <div class="descripcionropa">
                 Gorro kawasaki plomo
+                <h4>Selecciona tu talla</h4>
+                <select>
+                    <option value="">M</option>
+                    <option value="">L</option>
+                    <option value="">XL</option>
+                </select>
             </div>
         </div>
 
@@ -273,13 +309,24 @@
             <img class="imagenes" src="../img/gorrocatalogo3.png">
             <div class="descripcionropa">
                 Gorro kawasaki / Monster
-            </div>
+                <h4>Selecciona tu talla</h4>
+                <select>
+                    <option value="">M</option>
+                    <option value="">L</option>
+                    <option value="">XL</option>
+                </select>            </div>
         </div>
 
         <div class="cajaropa">
             <img class="imagenes" src="../img/gorrocatalogo4.png">
             <div class="descripcionropa">
                 Gorro akaprovic
+                <h4>Selecciona tu talla</h4>
+                <select>
+                    <option value="">M</option>
+                    <option value="">L</option>
+                    <option value="">XL</option>
+                </select>
             </div>
         </div>
 
@@ -287,6 +334,12 @@
             <img class="imagenes" src="../img/chaquetacatalogo1.png">
             <div class="descripcionropa">
                 Chaqueta moto dainese blanca
+                <h4>Selecciona tu talla</h4>
+                <select>
+                    <option value="">M</option>
+                    <option value="">L</option>
+                    <option value="">XL</option>
+                </select>
             </div>
         </div>
 
@@ -294,6 +347,12 @@
             <img class="imagenes" src="../img/chaquetacatalogo2.png">
             <div class="descripcionropa">
                 Chaqueta de moto dainese negra
+                <h4>Selecciona tu talla</h4>
+                <select>
+                    <option value="">M</option>
+                    <option value="">L</option>
+                    <option value="">XL</option>
+                </select>
             </div>
         </div>
 
@@ -301,6 +360,12 @@
             <img class="imagenes" src="../img/chaquetacatalogo3.webp">
             <div class="descripcionropa">
                 Chaqueta de moto dinese urbana blanca
+                <h4>Selecciona tu talla</h4>
+                <select>
+                    <option value="">M</option>
+                    <option value="">L</option>
+                    <option value="">XL</option>
+                </select>
             </div>
         </div>
 
@@ -308,6 +373,12 @@
             <img class="imagenes" src="../img/chaquetacatalogo4.png">
             <div class="descripcionropa">
                 Chaqueta de moto dainese negra con rojo
+                <h4>Selecciona tu talla</h4>
+                <select>
+                    <option value="">M</option>
+                    <option value="">L</option>
+                    <option value="">XL</option>
+                </select>
             </div>
         </div>
 
@@ -315,6 +386,12 @@
             <img class="imagenes" src="../img/cascocatalogo1.png">
             <div class="descripcionropa">
                 Casco enduro no abatible
+                <h4>Selecciona tu talla</h4>
+                <select>
+                    <option value="">M</option>
+                    <option value="">L</option>
+                    <option value="">XL</option>
+                </select>
             </div>
         </div>
 
@@ -322,6 +399,12 @@
             <img class="imagenes" src="../img/cascocatalogo2.png">
             <div class="descripcionropa">
                 Casco depredador no abatible
+                <h4>Selecciona tu talla</h4>
+                <select>
+                    <option value="">M</option>
+                    <option value="">L</option>
+                    <option value="">XL</option>
+                </select>
             </div>
         </div>
 
@@ -329,6 +412,12 @@
             <img class="imagenes" src="../img/cascocatalogo3.webp">
             <div class="descripcionropa">
                 Casco valentino rossi shark
+                <h4>Selecciona tu talla</h4>
+                <select>
+                    <option value="">M</option>
+                    <option value="">L</option>
+                    <option value="">XL</option>
+                </select>
             </div>
         </div>
 
@@ -336,6 +425,12 @@
             <img class="imagenes" src="../img/cascocatalogo4.png">
             <div class="descripcionropa">
                 Casco multiproposito abatible
+                <h4>Selecciona tu talla</h4>
+                <select>
+                    <option value="">M</option>
+                    <option value="">L</option>
+                    <option value="">XL</option>
+                </select>
             </div>
         </div>
 
