--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -33,6 +33,11 @@
 
 
 
+    <div class="titulovehiculos">
+        <h2 class="h2estilo">Contáctanos</h2>
+    </div>
+
+
 
 
 
@@ -40,7 +45,7 @@
         <form class="formregistro2">
 
             <fieldset class="fieldset2">
-                <legend>Contactanos</legend>
+                <legend>Formulario de contácto</legend>
 
                 <label for="nombre">Nombre</label>
                 <input type="text" id="nombre" placeholder="Ingrese su nombre...">
@@ -51,7 +56,7 @@
                 <label for="comentarios">Comentarios</label>
                 <textarea id="comentarios" cols="30" rows="10" placeholder="Ingrese sus comentarios"></textarea>
 
-                <input class="enviarcontacto" type="submit" name="Enviar">
+                <input class="enviarcontacto" type="submit" value="Enviar">
 
                 <a class="volverinicio" href="../index.html">Volver al inicio</a>
 
