--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -43,30 +43,44 @@
         </div>
     </header>
 
+    <div class="fondogradientanimado">
+        <h3 class="titulonosotros"> Quienes Somos? </h3>
 
-    <h3 class="titulonosotros"> Quienes Somos? </h3>
+        <div class="cajaseimagenes">
 
-    <div class="cajaseimagenes">
 
-        <div class="quienesomos">
+            <div class="quienesomos">
 
-            <p> Somos una empresa dedicada al rubro de la importación de motocicletas, somos apasionados <i
-                    class="em em-heart_eyes" aria-role="presentation"
+                <p>
+                    Somos una empresa dedicada al rubro de la importación de motocicletas, somos apasionados <i
+                    class="em       em-heart_eyes" aria-role="presentation"
                     aria-label="SMILING FACE WITH HEART-SHAPED EYES"></i>
-                por las motos <i class="em em-racing_motorcycle" aria-role="presentation" aria-label=""></i> , sin
-                embargo
-                no queremos entregarte cualquier moto. En KAWAL <i class="em em-heart" aria-role="presentation"aria-label="HEAVY BLACK HEART"></i> VERS importamos motos Kawasaki que nos gustan tanto como a ti, en nuestra tienda encontraras el estilo que soñaste y está solo a un par de clicks, una variedad de modelos, que no te puedes perder. <br> visita nuestro catálogo <i class="em em-green_book" aria-role="presentation" aria-label="GREEN BOOK"></i> para conocer todos los modelos disponibles, recuerda que puedes registrarte en nuestra pagina para estar informado <i class="em em-rolled_up_newspaper" aria-role="presentation" aria-label=""></i> de todas las novedades y modelos que estarán disponibles
-                proximamente... o si te interesa algun modelo del catálogo puedes simplemente contactarnos ingresando tu nombre correo y tu consula o solicitud en nuestra pagina de contácto <i class="em em-mailbox_with_mail" aria-role="presentation" aria-label="OPEN MAILBOX WITH RAISED FLAG"></i>. <br> Recuerda que mas abajo <i class="em em-arrow_heading_down" aria-role="presentation" aria-label="ARROW POINTING RIGHTWARDS THEN CURVING DOWNWARDS"></i> puedes revisar la ubicación <i class="em em-world_map" aria-role="presentation" aria-label=""></i> de nuetra tienda para visitarla de manera presencial <i class="em em-man-walking" aria-role="presentation" aria-label=""></i> <br> (hacemos envios a todo chile) <i class="em em-truck" aria-role="presentation" aria-label="DELIVERY TRUCK"></i> <br> nos vemos pronto ATT: Kawateam
-            </p>
+                    por las motos <i class="em em-racing_motorcycle" aria-role="presentation" aria-label=""></i> ,
+                    sinembargo no queremos entregarte cualquier moto. En KAWAL <i class="em em-heart"
+                    aria-role="presentation" aria-label="HEAVY BLACK HEART"></i> VERS importamos motos Kawasaki que
+                    nos gustan tanto como ati, en nuestra tienda encontraras el estilo que soñaste y está solo a un par de <i
+                    class="em em-three_button_mouse" aria-role="presentation" aria-label=""></i>clicks, una variedad
+                    de modelos, que no te puedes perder. <br> visita nuestro catálogo <i class="em em-book"
+                    aria-role="presentation" aria-label="OPEN BOOK"></i> para conocer todos los modelos
+                    disponibles, recuerda que puedes registrarte en nuestra pagina para estar informado <i
+                    class="em em-rolled_up_newspaper" aria-role="presentation" aria-label=""></i> de todas las
+                    novedades y modelos que estarán disponibles proximamente... o <i class="em em-open_mouth"
+                    aria-role="presentation" aria-label="FACE WITH OPEN MOUTH"></i> si te interesa algun modelo del
+                    catálogo puedes simplemente contactarnos ingresando tu nombre, correo y tu consula o solicitud en
+                    nuestra pagina de contácto <i class="em em-mailbox_with_mail" aria-role="presentation"
+                    aria-label="OPEN MAILBOX WITH RAISED FLAG"></i>. <br> Recuerda que mas abajo <i
+                    class="em em-arrow_heading_down" aria-role="presentation" aria-label="ARROW POINTING RIGHTWARDS THEN CURVING DOWNWARDS"></i> puedes revisar la ubicación <i class="em em-world_map" aria-role="presentation" aria-label=""></i> de nuetra tienda para visitarla de manera presencial <i class="em em-man-walking" aria-role="presentation" aria-label=""></i> <br> (hacemos envios a todo chile) <i class="em em-truck" aria-role="presentation" aria-label="DELIVERY TRUCK"></i> <br> nos vemos pronto ATT: Kawateam
+                </p>
+
+            </div>
+
+            <div class="imgnosotros">
+                <img class="motoexpo" src="../img/ninjaexpo.jpg">
+            </div>
+
+
 
         </div>
-
-        <div class="imgnosotros">
-            <img class="motoexpo" src="../img/ninjaexpo.jpg">
-        </div>
-
-
-
     </div>
 
     <div class="containermapa">
