--- a/pages/registro.html
+++ b/pages/registro.html
@@ -32,6 +32,10 @@
 
     </header>
 
+    <div class="tituloregistro">
+        <h2 class="h2estilo">Crea tu cuenta</h2>
+    </div>
+
     <div class="form1">
         <form class="formregistro1" action="">
 
@@ -47,7 +51,7 @@
                 <label for="contraseña">Contraseña</label>
                 <input type="password" id="contraseña" placeholder="Ingrese su contraseña...">
 
-                <input class="enviarregistro" type="submit" name="Enviar">
+                <input class="enviarregistro" type="submit" value="Enviar">
 
                 <a class="tienescuentaform1" href="../index.html">Ya tienes una cuenta?</a>
             </fieldset>
