Actualizado queries animaciones y texto

--- a/pages/catalogo.html
+++ b/pages/catalogo.html
@@ -211,6 +211,9 @@
             </ul>
         </div>
 
+        <div class="linkreturn">
+        <a class="linkinicio" href="../index.html"> Volver al inicio</a>
+        </div>
 
 
     </section>
@@ -230,12 +233,13 @@
         <div class="cajaropa">
             <img class="imagenes" src="../img/ropacatalogo1.png">
             <div class="descripcionropa">
-                <p>Polera kawasaki Monster energi </p>
+                <p>Polera kawasaki Monster energy </p>
                 <h4>Selecciona tu talla</h4>
                 <select>
-                    <option value="">M</option>
-                    <option value="">L</option>
-                    <option value="">XL</option>
+                    <option value="nada"></option>
+                    <option value="M">M</option>
+                    <option value="L">L</option>
+                    <option value="XL">XL</option>
                 </select>
             </div>
         </div>
@@ -243,9 +247,10 @@
         <div class="cajaropa">
             <img class="imagenes" src="../img/ropacatalogo2-removebg-preview.png">
             <div class="descripcionropa">
-                Polera kawasaki sport
+                Polera kawasaki sport negra
                 <h4>Selecciona tu talla</h4>
                 <select>
+                    <option value="nada"></option>
                     <option value="">M</option>
                     <option value="">L</option>
                     <option value="">XL</option>
@@ -259,6 +264,7 @@
                 Polera kawasaki negra logo rojo
                 <h4>Selecciona tu talla</h4>
                 <select>
+                    <option value="nada"></option>
                     <option value="">M</option>
                     <option value="">L</option>
                     <option value="">XL</option>
@@ -272,6 +278,7 @@
                 Polera kawasaki racing team blanco
                 <h4>Selecciona tu talla</h4>
                 <select>
+                    <option value="nada"></option>
                     <option value="">M</option>
                     <option value="">L</option>
                     <option value="">XL</option>
@@ -285,6 +292,7 @@
                 Gorro kawasaki / fox negro
                 <h4>Selecciona tu talla</h4>
                 <select>
+                    <option value="nada"></option>
                     <option value="">M</option>
                     <option value="">L</option>
                     <option value="">XL</option>
@@ -298,6 +306,7 @@
                 Gorro kawasaki plomo
                 <h4>Selecciona tu talla</h4>
                 <select>
+                    <option value="nada"></option>
                     <option value="">M</option>
                     <option value="">L</option>
                     <option value="">XL</option>
@@ -311,6 +320,7 @@
                 Gorro kawasaki / Monster
                 <h4>Selecciona tu talla</h4>
                 <select>
+                    <option value="nada"></option>
                     <option value="">M</option>
                     <option value="">L</option>
                     <option value="">XL</option>
@@ -323,6 +333,7 @@
                 Gorro akaprovic
                 <h4>Selecciona tu talla</h4>
                 <select>
+                    <option value="nada"></option>
                     <option value="">M</option>
                     <option value="">L</option>
                     <option value="">XL</option>
@@ -336,6 +347,7 @@
                 Chaqueta moto dainese blanca
                 <h4>Selecciona tu talla</h4>
                 <select>
+                    <option value="nada"></option>
                     <option value="">M</option>
                     <option value="">L</option>
                     <option value="">XL</option>
@@ -349,6 +361,7 @@
                 Chaqueta de moto dainese negra
                 <h4>Selecciona tu talla</h4>
                 <select>
+                    <option value="nada"></option>
                     <option value="">M</option>
                     <option value="">L</option>
                     <option value="">XL</option>
@@ -362,6 +375,7 @@
                 Chaqueta de moto dinese urbana blanca
                 <h4>Selecciona tu talla</h4>
                 <select>
+                    <option value="nada"></option>
                     <option value="">M</option>
                     <option value="">L</option>
                     <option value="">XL</option>
@@ -372,9 +386,10 @@
         <div class="cajaropa">
             <img class="imagenes" src="../img/chaquetacatalogo4.png">
             <div class="descripcionropa">
-                Chaqueta de moto dainese negra con rojo
+                Chaqueta de moto dainese negra rojo
                 <h4>Selecciona tu talla</h4>
                 <select>
+                    <option value="nada"></option>
                     <option value="">M</option>
                     <option value="">L</option>
                     <option value="">XL</option>
@@ -388,6 +403,7 @@
                 Casco enduro no abatible
                 <h4>Selecciona tu talla</h4>
                 <select>
+                    <option value="nada"></option>
                     <option value="">M</option>
                     <option value="">L</option>
                     <option value="">XL</option>
@@ -401,6 +417,7 @@
                 Casco depredador no abatible
                 <h4>Selecciona tu talla</h4>
                 <select>
+                    <option value="nada"></option>
                     <option value="">M</option>
                     <option value="">L</option>
                     <option value="">XL</option>
@@ -411,9 +428,10 @@
         <div class="cajaropa">
             <img class="imagenes" src="../img/cascocatalogo3.webp">
             <div class="descripcionropa">
-                Casco valentino rossi shark
+                Casco valentino rossi shark azul
                 <h4>Selecciona tu talla</h4>
                 <select>
+                    <option value="nada"></option>
                     <option value="">M</option>
                     <option value="">L</option>
                     <option value="">XL</option>
@@ -427,6 +445,7 @@
                 Casco multiproposito abatible
                 <h4>Selecciona tu talla</h4>
                 <select>
+                    <option value="nada"></option>
                     <option value="">M</option>
                     <option value="">L</option>
                     <option value="">XL</option>
