se añade pagina de historia con bostrap y un carrusel

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
                     <a class="navbarini" href="./pages/catalogo.html">catálogo</a>
                     <a class="navbarini" href="./pages/nosotros.html">Nosotros</a>
                     <a class="navbarini" href="./pages/contacto.html">Contacto</a>
+                    <a class="navbarini" href="./pages/historia.html">Historia</a>
 
                 </nav>
 
