actualizado diseño responsive

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 
 <head>
 
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <title>Kawalovers</title>
     <link rel="stylesheet" href="./css/styles.css">
     <link rel="icon" href="./img/Kawalovers K.L..png" type="image/x-icon">
@@ -36,7 +38,7 @@
                 <nav>
 
                     <a class="navbarini" href="./pages/registro.html">Registrarse</a>
-                    <a class="navbarini" href="./pages/catalogo.html">catálogo</a>
+                    <a class="navbarini" href="./pages/catalogo.html">Catálogo</a>
                     <a class="navbarini" href="./pages/nosotros.html">Nosotros</a>
                     <a class="navbarini" href="./pages/contacto.html">Contacto</a>
                     <a class="navbarini" href="./pages/historia.html">Historia</a>
