--- a/pages/catalogo.html
+++ b/pages/catalogo.html
@@ -3,6 +3,9 @@
 
 <head>
 
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+
     <title>Catalogo</title>
     <link rel="stylesheet" href="../css/styles.css">
     <link rel="icon" href="../img/Kawalovers K.L..png" type="image/x-icon">
@@ -31,7 +34,7 @@
 
             <div>
 
-                <nav>
+                <nav class="menu">
                     <a class="navbarini" href="../pages/contacto.html">Contacto</a>
                     <a class="navbarini" href="../index.html">Voler al inicio</a>
                 </nav>
@@ -56,7 +59,7 @@
 
         <div class="cajamoto">
             <p>KLX 140R</p>
-            <img src="../img/endurocatalogo1.png" alt="">
+            <img class="fotomoto" src="../img/endurocatalogo1.png" alt="">
         </div>
 
         <div class="cajadescripcionmoto">
@@ -71,7 +74,7 @@
 
         <div class="cajamoto">
             <p>KLX 230R</p>
-            <img src="../img/endurocatalogo2.png" alt="">
+            <img class="fotomoto" src="../img/endurocatalogo2.png" alt="">
         </div>
 
         <div class="cajadescripcionmoto">
@@ -87,7 +90,7 @@
 
         <div class="cajamoto">
             <p>KLX 300R</p>
-            <img src="../img/endurocatalogo3.png" alt="">
+            <img class="fotomoto" src="../img/endurocatalogo3.png" alt="">
         </div>
 
         <div class="cajadescripcionmoto">
@@ -110,7 +113,7 @@
 
         <div class="cajamoto">
             <p>Ninja 400</p>
-            <img src="../img/ninjacatalogo1.png" alt="">
+            <img class="fotomoto" src="../img/ninjacatalogo1.png" alt="">
         </div>
 
         <div class="cajadescripcionmoto">
@@ -124,7 +127,7 @@
 
         <div class="cajamoto">
             <p>Ninja ZX 6R</p>
-            <img src="../img/ninjacatalogo2.png" alt="">
+            <img class="fotomoto" src="../img/ninjacatalogo2.png" alt="">
         </div>
 
         <div class="cajadescripcionmoto">
@@ -140,7 +143,7 @@
 
         <div class="cajamoto">
             <p>Ninja ZX 10R</p>
-            <img src="../img/ninjacatalogo3.png" alt="">
+            <img class="fotomoto" src="../img/ninjacatalogo3.png" alt="">
         </div>
 
         <div class="cajadescripcionmoto">
@@ -161,7 +164,7 @@
 
         <div class="cajamoto">
             <p>VERSYS X300</p>
-            <img src="../img/trailcatalogo1.png" alt="">
+            <img class="fotomoto" src="../img/trailcatalogo1.png" alt="">
         </div>
 
         <div class="cajadescripcionmoto">
@@ -177,7 +180,7 @@
 
         <div class="cajamoto">
             <p>KLR 650</p>
-            <img src="../img/trialcatalogo2.png" alt="">
+            <img class="fotomoto" src="../img/trialcatalogo2.png" alt="">
         </div>
 
         <div class="cajadescripcionmoto">
@@ -199,7 +202,7 @@
 
         <div class="cajamoto">
             <p>VULKAN S</p>
-            <img src="../img/chopercatalogo1.png" alt="">
+            <img class="fotomoto" src="../img/chopercatalogo1.png" alt="">
         </div>
 
         <div class="cajadescripcionmoto">
