--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -2,6 +2,11 @@
 <html>
 
 <head>
+
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+
+
     <title>Nosotros</title>
     <link rel="stylesheet" href="../css/styles.css">
     <link rel="icon" href="../img/Kawalovers K.L..png" type="image/x-icon">
@@ -30,7 +35,7 @@
 
             <div>
 
-                <nav>
+                <nav class="menu">
                     <a class="navbarini" href="../pages/contacto.html">Contacto</a>
                     <a class="navbarini" href="../index.html">Voler al inicio</a>
                 </nav>
@@ -58,7 +63,7 @@
                     por las motos <i class="em em-racing_motorcycle" aria-role="presentation" aria-label=""></i> ,
                     sinembargo no queremos entregarte cualquier moto. En KAWAL <i class="em em-heart"
                     aria-role="presentation" aria-label="HEAVY BLACK HEART"></i> VERS importamos motos Kawasaki que
-                    nos gustan tanto como ati, en nuestra tienda encontraras el estilo que soñaste y está solo a un par de <i
+                    nos gustan tanto como a ti, en nuestra tienda encontraras el estilo que soñaste y está solo a un par de <i
                     class="em em-three_button_mouse" aria-role="presentation" aria-label=""></i>clicks, una variedad
                     de modelos, que no te puedes perder. <br> visita nuestro catálogo <i class="em em-book"
                     aria-role="presentation" aria-label="OPEN BOOK"></i> para conocer todos los modelos
