--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -2,6 +2,9 @@
 
 <head>
 
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+
     <title>Contacto</title>
     <link rel="stylesheet" href="../css/styles.css">
     <link rel="icon" href="../img/Kawalovers K.L..png" type="image/x-icon">
