--- a/pages/historia.html
+++ b/pages/historia.html
@@ -78,11 +78,11 @@
             </div>
 
             <div class="col-md-6">
-                <img src="../img/astillerokawasaki.jpg">
+                <img class="img-fluid" src="../img/astillerokawasaki.jpg">
             </div>
 
             <div class="col-md-6 imagenavion">
-                <img src="../img/avionhistoria.jpg">
+                <img class="img-fluid" src="../img/avionhistoria.jpg">
             </div>
 
             <div class="col-md-6 textos">
@@ -115,12 +115,12 @@
             </div>
 
             <div class="col-md-6">
-                <img src="../img/mapahistoria.jpg">
+                <img class="img-fluid" src="../img/mapahistoria.jpg">
             </div>
 
 
             <div class="col-md-6 imagenavion">
-                <img src="../img/motohistoria.jpg">
+                <img class="img-fluid" src="../img/motohistoria.jpg">
             </div>
 
             <div class="col-md-6 textos">
@@ -160,22 +160,22 @@
         <div id="carouselExample" class="carousel slide">
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img src="../img/legendaria1.jpg" class="d-block w-100" alt="...">
+                <img class="img-fluid" src="../img/legendaria1.jpg" class="d-block w-100" alt="...">
               </div>
               <div class="carousel-item">
-                <img src="../img/legendaria2.jpg" class="d-block w-100" alt="...">
+                <img class="img-fluid" src="../img/legendaria2.jpg" class="d-block w-100" alt="...">
               </div>
               <div class="carousel-item">
-                <img src="../img/legendaria3.jpg" class="d-block w-100" alt="...">
+                <img class="img-fluid" src="../img/legendaria3.jpg" class="d-block w-100" alt="...">
               </div>
               <div class="carousel-item">
-                <img src="../img/legendaria4.jpg" class="d-block w-100" alt="...">
+                <img class="img-fluid" src="../img/legendaria4.jpg" class="d-block w-100" alt="...">
               </div>
               <div class="carousel-item">
-                <img src="../img/legendaria5.jpg" class="d-block w-100" alt="...">
+                <img class="img-fluid" src="../img/legendaria5.jpg" class="d-block w-100" alt="...">
               </div>
               <div class="carousel-item">
-                <img src="../img/legendaria6.jpg" class="d-block w-100" alt="...">
+                <img class="img-fluid" src="../img/legendaria6.jpg" class="d-block w-100" alt="...">
               </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
