diseño responsive mobile

--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -56,7 +56,7 @@
 
             <div class="quienesomos">
 
-                <p>
+                <p class="parrafonosotros">
                     Somos una empresa dedicada al rubro de la importación de motocicletas, somos apasionados <i
                     class="em       em-heart_eyes" aria-role="presentation"
                     aria-label="SMILING FACE WITH HEART-SHAPED EYES"></i>
