se actualiza a scss con modificaciones en las paginas y diseño responsive

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -6,7 +6,11 @@
 
 
     <title>Contacto</title>
-    <link rel="stylesheet" href="../css/styles.css">
+    <meta name="keywords" content="motos, kawasaki, kawalovers, contáctacos">
+    <meta name="description" content=" esta pagina es para contactarnos o enviarnos ">
+
+
+    <link rel="stylesheet" href="../css/estilo.css">
     <link rel="icon" href="../img/Kawalovers K.L..png" type="image/x-icon">
 
 </head>
@@ -17,7 +21,7 @@
     <header>
         <div class="cajaheder">
             <div>
-                <img class="logo" src="../img/Kawalovers K.L..png">
+                <img class="logo" src="../img/Kawalovers K.L..png" alt="Logo de la pagina">
 
             </div>
 
@@ -67,6 +71,10 @@
 
         </form>
     </div>
+
+    
+
+
 </body>
 
 </html>
