--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -8,7 +8,11 @@
 
 
     <title>Nosotros</title>
-    <link rel="stylesheet" href="../css/styles.css">
+    <meta name="keywords" content="motos, kawasaki, kawalovers, nosotros, empresa, descripción">
+    <meta name="description" content=" esta pagina es la descripción de nuestra empresa">
+
+
+    <link rel="stylesheet" href="../css/estilo.css">
     <link rel="icon" href="../img/Kawalovers K.L..png" type="image/x-icon">
     <link href="https://emoji-css.afeld.me/emoji.css" rel="stylesheet">
 </head>
@@ -17,8 +21,8 @@
 
     <header>
         <div class="cajaheder">
-            <div> <!-- revisar si el div es necesario o no-->
-                <img class="logo" src="../img/Kawalovers K.L..png">
+            <div>
+                <img class="logo" src="../img/Kawalovers K.L..png" alt="Logo de la pagina">
 
             </div>
 
@@ -33,7 +37,7 @@
                 </p>
             </div>
 
-            <div>
+            <div class="navbarpadre">
 
                 <nav class="menu">
                     <a class="navbarini" href="../pages/contacto.html">Contacto</a>
@@ -80,7 +84,7 @@
             </div>
 
             <div class="imgnosotros">
-                <img class="motoexpo" src="../img/ninjaexpo.jpg">
+                <img class="motoexpo" src="../img/ninjaexpo.jpg" alt="Exposicion de moto kawasaki">
             </div>
 
 
@@ -99,6 +103,18 @@
 
 
 
+
+
+    <div>
+
+        <footer>
+            <div>
+                <img class="logofooter" src="../img/Kawalovers K.L..png" alt="Logo de la pagina">
+                <p class="derechoreservado">Kawalovers derechos reservadoss</p>
+            </div>
+        </footer>
+
+    </div>
 
 </body>
 
