--- a/pages/registro.html
+++ b/pages/registro.html
@@ -6,7 +6,10 @@
 
 
     <title>Registro</title>
-    <link rel="stylesheet" href="../css/styles.css">
+    <meta name="keywords" content="motos, kawasaki, kawalovers, registrate ">
+    <meta name="description" content=" esta pagina es para crear una cuenta en kawalovers">
+
+    <link rel="stylesheet" href="../css/estilo.css">
     <link rel="icon" href="../img/Kawalovers K.L..png" type="image/x-icon">
 
 </head>
@@ -17,7 +20,7 @@
 
         <div class="cajaheder">
             <div>
-                <img class="logo" src="../img/Kawalovers K.L..png">
+                <img class="logo" src="../img/Kawalovers K.L..png" alt="Logo de la pagina">
 
             </div>
 
@@ -61,6 +64,10 @@
 
         </form>
     </div>
+
+
+    
+
 </body>
 
 </html>
