--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <title>Kawalovers</title>
-    <link rel="stylesheet" href="./css/styles.css">
+    <meta name="keywords" content="motos, kawasaki, kawalovers,">
+    <meta name="description" content=" esta pagina es de venta de motos en chile, motos exclusivamente marca kawasaki">
+
+
+    <link rel="stylesheet" href="./css/estilo.css">
     <link rel="icon" href="./img/Kawalovers K.L..png" type="image/x-icon">
     <link href="https://emoji-css.afeld.me/emoji.css" rel="stylesheet">
 
@@ -17,7 +21,7 @@
     <header>
         <div class="cajaheder">
             <div>
-                <img class="logo" src="./img/Kawalovers K.L..png">
+                <img class="logo" src="./img/Kawalovers K.L..png" alt="Logo de la pagina">
 
             </div>
 
@@ -35,7 +39,7 @@
 
             <div class="navbarpadre">
 
-                <nav>
+                <nav class="menu">
 
                     <a class="navbarini" href="./pages/registro.html">Registrarse</a>
                     <a class="navbarini" href="./pages/catalogo.html">Catálogo</a>
@@ -62,7 +66,7 @@
         </div>
 
         <div class="imgindex">
-            <img class="imgp" src="img/HD-wallpaper-kawasaki-dirt-bike-dirt-sunset-bike-kawasaki.jpg">
+            <img class="imgp" src="img/HD-wallpaper-kawasaki-dirt-bike-dirt-sunset-bike-kawasaki.jpg" alt="Moto enduro">
             <h3 class="tituloimgp">Enduro</h3>
             <p class="pimg">Las características de una motocicleta de enduro, están condicionadas por la disciplina del
                 enduro; del motocross y el trial. <br> La parte ciclo de una moto de enduro es similar a la de cross,
@@ -81,7 +85,7 @@
 
 
         <div class="imgindex">
-            <img class="imgp" src="img/Kawasaki-ZX10-Portada-pista.jpg">
+            <img class="imgp" src="img/Kawasaki-ZX10-Portada-pista.jpg" alt="Moto sport">
             <h3 class="tituloimgp">sport</h3>
             <p class="pimg">Las motocicletas deportivas van equipadas en su mayoría de un carenado, que mejora su
                 aerodinámica, con el fin de alcanzar altas velocidades, habitualmente por encima de los 250 km/h o
@@ -90,7 +94,7 @@
                 en la competición de velocidad, la motocicleta de tipo deportivo es capaz de la aceleración rápida y
                 máximas velocidades. <br> Según la cilindrada y la vocación más o menos afirmada por la competición en
                 circuito, existen dos categorías predominantes en el mundo del deporte: la " Superdeportiva " (600 cm 3
-                ) y la " Superbike " (1000 cm 3).). <br> Evidentemente, hay desplazamientos intermedios, incluso más
+                ) y la " Superbike " (1000 cm 3). <br> Evidentemente, hay desplazamientos intermedios, incluso más
                 bajos o
                 más altos. La potencia de su motor y la ligereza de su chasis son los principales argumentos
                 comerciales.</p>
@@ -99,7 +103,7 @@
         </div>
 
         <div class="imgindex">
-            <img class="imgp" src="img/slide_3.jpg">
+            <img class="imgp" src="img/slide_3.jpg" alt="Moto trail">
             <h3 class="tituloimgp">trail</h3>
             <p class="pimg">Las motos de trail son un tipo de motocicletas muy especial que se caracterizan por tener
                 unas ruedas más grandes y un diseño más robusto, lo que les permite afrontar todo tipo de terrenos. <br>
@@ -108,12 +112,12 @@
                 la principal ventaja es la capacidad para maniobrar en terrenos accidentados. No importa si estás en el
                 desierto, la montaña o el bosque; una moto de trial puede superar todos los obstáculos.
             </p>
-            <a href="./pages/catalogo.html#trail" class="linkimgp">Ver Catálogo</a>
+            <a href="./pages/catalogo.html#trail" class="linkimgp"> Ver Catálogo</a>
 
         </div>
 
         <div class="imgindex">
-            <img class="imgp" src="img/Vulcan6.jpg">
+            <img class="imgp" src="img/Vulcan6.jpg" alt="Moto choper">
             <h3 class="tituloimgp">choper</h3>
             <p class="pimg">El diseño de las chopper es el rasgo que más las identifica, pues se caracterizan por poseer
                 una horquilla larga y manillar elevado. <br> Por tal razón, han sido las protagonistas de series o
@@ -145,7 +149,7 @@
 
         <footer>
             <div>
-                <img class="logofooter" src="./img/Kawalovers K.L..png">
+                <img class="logofooter" src="./img/Kawalovers K.L..png" alt="Logo de la pagina">
                 <p class="derechoreservado">Kawalovers derechos reservadoss</p>
             </div>
         </footer>
