--- a/pages/catalogo.html
+++ b/pages/catalogo.html
@@ -7,7 +7,11 @@
 
 
     <title>Catalogo</title>
-    <link rel="stylesheet" href="../css/styles.css">
+    <meta name="keywords" content="motos, kawasaki, kawalovers, catálogo, modelos, ropa">
+    <meta name="description" content=" esta pagina es el catálogo de nuestra empresa donde encontraras los diferentes modelos y nuestra ropa">
+
+
+    <link rel="stylesheet" href="../css/estilo.css">
     <link rel="icon" href="../img/Kawalovers K.L..png" type="image/x-icon">
 
 </head>
@@ -17,7 +21,7 @@
     <header>
         <div class="cajaheder">
             <div>
-                <img class="logo" src="../img/Kawalovers K.L..png">
+                <img class="logo" src="../img/Kawalovers K.L..png" alt="Logo de la pagina">
 
             </div>
 
@@ -32,7 +36,7 @@
                 </p>
             </div>
 
-            <div>
+            <div class="navbarpadre">
 
                 <nav class="menu">
                     <a class="navbarini" href="../pages/contacto.html">Contacto</a>
@@ -59,7 +63,7 @@
 
         <div class="cajamoto">
             <p>KLX 140R</p>
-            <img class="fotomoto" src="../img/endurocatalogo1.png" alt="">
+            <img class="fotomoto" src="../img/endurocatalogo1.png" alt="moto enduro">
         </div>
 
         <div class="cajadescripcionmoto">
@@ -74,7 +78,7 @@
 
         <div class="cajamoto">
             <p>KLX 230R</p>
-            <img class="fotomoto" src="../img/endurocatalogo2.png" alt="">
+            <img class="fotomoto" src="../img/endurocatalogo2.png" alt="moto enduro">
         </div>
 
         <div class="cajadescripcionmoto">
@@ -90,7 +94,7 @@
 
         <div class="cajamoto">
             <p>KLX 300R</p>
-            <img class="fotomoto" src="../img/endurocatalogo3.png" alt="">
+            <img class="fotomoto" src="../img/endurocatalogo3.png" alt="moto enduro">
         </div>
 
         <div class="cajadescripcionmoto">
@@ -113,7 +117,7 @@
 
         <div class="cajamoto">
             <p>Ninja 400</p>
-            <img class="fotomoto" src="../img/ninjacatalogo1.png" alt="">
+            <img class="fotomoto" src="../img/ninjacatalogo1.png" alt="moto sport">
         </div>
 
         <div class="cajadescripcionmoto">
@@ -127,7 +131,7 @@
 
         <div class="cajamoto">
             <p>Ninja ZX 6R</p>
-            <img class="fotomoto" src="../img/ninjacatalogo2.png" alt="">
+            <img class="fotomoto" src="../img/ninjacatalogo2.png" alt="moto sport">
         </div>
 
         <div class="cajadescripcionmoto">
@@ -143,7 +147,7 @@
 
         <div class="cajamoto">
             <p>Ninja ZX 10R</p>
-            <img class="fotomoto" src="../img/ninjacatalogo3.png" alt="">
+            <img class="fotomoto" src="../img/ninjacatalogo3.png" alt="moto sport">
         </div>
 
         <div class="cajadescripcionmoto">
@@ -164,7 +168,7 @@
 
         <div class="cajamoto">
             <p>VERSYS X300</p>
-            <img class="fotomoto" src="../img/trailcatalogo1.png" alt="">
+            <img class="fotomoto" src="../img/trailcatalogo1.png" alt="moto trail">
         </div>
 
         <div class="cajadescripcionmoto">
@@ -180,7 +184,7 @@
 
         <div class="cajamoto">
             <p>KLR 650</p>
-            <img class="fotomoto" src="../img/trialcatalogo2.png" alt="">
+            <img class="fotomoto" src="../img/trialcatalogo2.png" alt="moto trail">
         </div>
 
         <div class="cajadescripcionmoto">
@@ -202,7 +206,7 @@
 
         <div class="cajamoto">
             <p>VULKAN S</p>
-            <img class="fotomoto" src="../img/chopercatalogo1.png" alt="">
+            <img class="fotomoto" src="../img/chopercatalogo1.png" alt="moto chopper">
         </div>
 
         <div class="cajadescripcionmoto">
@@ -234,7 +238,7 @@
     <section class="gridropa" id="catalogoropa">
 
         <div class="cajaropa">
-            <img class="imagenes" src="../img/ropacatalogo1.png">
+            <img class="imagenes" src="../img/ropacatalogo1.png" alt="polera">
             <div class="descripcionropa">
                 <p>Polera kawasaki Monster energy </p>
                 <h4>Selecciona tu talla</h4>
@@ -248,7 +252,7 @@
         </div>
 
         <div class="cajaropa">
-            <img class="imagenes" src="../img/ropacatalogo2-removebg-preview.png">
+            <img class="imagenes" src="../img/ropacatalogo2-removebg-preview.png" alt="polera">
             <div class="descripcionropa">
                 Polera kawasaki sport negra
                 <h4>Selecciona tu talla</h4>
@@ -262,7 +266,7 @@
         </div>
 
         <div class="cajaropa">
-            <img class="imagenes" src="../img/ropacatalogo3-removebg-preview.png">
+            <img class="imagenes" src="../img/ropacatalogo3-removebg-preview.png" alt="polera">
             <div class="descripcionropa">
                 Polera kawasaki negra logo rojo
                 <h4>Selecciona tu talla</h4>
@@ -276,7 +280,7 @@
         </div>
 
         <div class="cajaropa">
-            <img class="imagenes" src="../img/ropacatalogo4-removebg-preview.png">
+            <img class="imagenes" src="../img/ropacatalogo4-removebg-preview.png" alt="polera">
             <div class="descripcionropa">
                 Polera kawasaki racing team blanco
                 <h4>Selecciona tu talla</h4>
@@ -290,7 +294,7 @@
         </div>
 
         <div class="cajaropa">
-            <img class="imagenes" src="../img/gorrocatalogo1.jpg">
+            <img class="imagenes" src="../img/gorrocatalogo1.jpg" alt="gorros">
             <div class="descripcionropa">
                 Gorro kawasaki / fox negro
                 <h4>Selecciona tu talla</h4>
@@ -304,7 +308,7 @@
         </div>
 
         <div class="cajaropa">
-            <img class="imagenes" src="../img/gorrocatalogo2.jpg">
+            <img class="imagenes" src="../img/gorrocatalogo2.jpg" alt="gorros">
             <div class="descripcionropa">
                 Gorro kawasaki plomo
                 <h4>Selecciona tu talla</h4>
@@ -318,7 +322,7 @@
         </div>
 
         <div class="cajaropa">
-            <img class="imagenes" src="../img/gorrocatalogo3.png">
+            <img class="imagenes" src="../img/gorrocatalogo3.png" alt="gorros">
             <div class="descripcionropa">
                 Gorro kawasaki / Monster
                 <h4>Selecciona tu talla</h4>
@@ -331,7 +335,7 @@
         </div>
 
         <div class="cajaropa">
-            <img class="imagenes" src="../img/gorrocatalogo4.png">
+            <img class="imagenes" src="../img/gorrocatalogo4.png" alt="gorros">
             <div class="descripcionropa">
                 Gorro akaprovic
                 <h4>Selecciona tu talla</h4>
@@ -345,7 +349,7 @@
         </div>
 
         <div class="cajaropa">
-            <img class="imagenes" src="../img/chaquetacatalogo1.png">
+            <img class="imagenes" src="../img/chaquetacatalogo1.png" alt="chaqueta de moto">
             <div class="descripcionropa">
                 Chaqueta moto dainese blanca
                 <h4>Selecciona tu talla</h4>
@@ -359,7 +363,7 @@
         </div>
 
         <div class="cajaropa">
-            <img class="imagenes" src="../img/chaquetacatalogo2.png">
+            <img class="imagenes" src="../img/chaquetacatalogo2.png" alt="chaqueta de moto">
             <div class="descripcionropa">
                 Chaqueta de moto dainese negra
                 <h4>Selecciona tu talla</h4>
@@ -373,7 +377,7 @@
         </div>
 
         <div class="cajaropa">
-            <img class="imagenes" src="../img/chaquetacatalogo3.webp">
+            <img class="imagenes" src="../img/chaquetacatalogo3.webp" alt="chaqueta de moto">
             <div class="descripcionropa">
                 Chaqueta de moto dinese urbana blanca
                 <h4>Selecciona tu talla</h4>
@@ -387,7 +391,7 @@
         </div>
 
         <div class="cajaropa">
-            <img class="imagenes" src="../img/chaquetacatalogo4.png">
+            <img class="imagenes" src="../img/chaquetacatalogo4.png" alt="chaqueta de moto">
             <div class="descripcionropa">
                 Chaqueta de moto dainese negra rojo
                 <h4>Selecciona tu talla</h4>
@@ -401,7 +405,7 @@
         </div>
 
         <div class="cajaropa">
-            <img class="imagenes" src="../img/cascocatalogo1.png">
+            <img class="imagenes" src="../img/cascocatalogo1.png" alt="casco de moto">
             <div class="descripcionropa">
                 Casco enduro no abatible
                 <h4>Selecciona tu talla</h4>
@@ -415,7 +419,7 @@
         </div>
 
         <div class="cajaropa">
-            <img class="imagenes" src="../img/cascocatalogo2.png">
+            <img class="imagenes" src="../img/cascocatalogo2.png" alt="casco de moto">
             <div class="descripcionropa">
                 Casco depredador no abatible
                 <h4>Selecciona tu talla</h4>
@@ -429,7 +433,7 @@
         </div>
 
         <div class="cajaropa">
-            <img class="imagenes" src="../img/cascocatalogo3.webp">
+            <img class="imagenes" src="../img/cascocatalogo3.webp" alt="casco de moto">
             <div class="descripcionropa">
                 Casco valentino rossi shark azul
                 <h4>Selecciona tu talla</h4>
@@ -443,7 +447,7 @@
         </div>
 
         <div class="cajaropa">
-            <img class="imagenes" src="../img/cascocatalogo4.png">
+            <img class="imagenes" src="../img/cascocatalogo4.png" alt="casco de moto">
             <div class="descripcionropa">
                 Casco multiproposito abatible
                 <h4>Selecciona tu talla</h4>
@@ -463,6 +467,17 @@
 
 
 
+
+    <div>
+
+        <footer>
+            <div>
+                <img class="logofooter" src="../img/Kawalovers K.L..png" alt="Logo de la pagina">
+                <p class="derechoreservado">Kawalovers derechos reservadoss</p>
+            </div>
+        </footer>
+
+    </div>
 
 
 
