--- a/pages/historia.html
+++ b/pages/historia.html
@@ -10,18 +10,23 @@
     <!-- Bostrap + mi css-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="../css/estilo.css">
 
 
     <title>Historia</title>
+    <meta name="keywords" content="motos, kawasaki, kawalovers, historia,">
+    <meta name="description" content=" esta pagina describe la historia de KAWASAKI">
+
+
+
 </head>
 
 <body>
 
     <header>
         <div class="cajaheder">
-            <div> <!-- revisar si el div es necesario o no-->
-                <img class="logo" src="../img/Kawalovers K.L..png">
+            <div>
+                <img class="logo" src="../img/Kawalovers K.L..png" alt="Logo de la pagina">
 
             </div>
 
@@ -36,9 +41,9 @@
                 </p>
             </div>
 
-            <div>
+            <div class="navbarpadre">
 
-                <nav>
+                <nav class="menu">
                     <a class="navbarini" href="../pages/contacto.html">Contacto</a>
                     <a class="navbarini" href="../index.html">Voler al inicio</a>
                 </nav>
@@ -78,11 +83,11 @@
             </div>
 
             <div class="col-md-6">
-                <img class="img-fluid" src="../img/astillerokawasaki.jpg">
+                <img class="img-fluid" src="../img/astillerokawasaki.jpg" alt="foto industria kawasaki">
             </div>
 
             <div class="col-md-6 imagenavion">
-                <img class="img-fluid" src="../img/avionhistoria.jpg">
+                <img class="img-fluid" src="../img/avionhistoria.jpg" alt="foto aeronave kawasaki">
             </div>
 
             <div class="col-md-6 textos">
@@ -115,12 +120,12 @@
             </div>
 
             <div class="col-md-6">
-                <img class="img-fluid" src="../img/mapahistoria.jpg">
+                <img class="img-fluid" src="../img/mapahistoria.jpg" alt="mapa historico kawasaki">
             </div>
 
 
             <div class="col-md-6 imagenavion">
-                <img class="img-fluid" src="../img/motohistoria.jpg">
+                <img class="img-fluid" src="../img/motohistoria.jpg"  alt="moto historica">
             </div>
 
             <div class="col-md-6 textos">
@@ -160,22 +165,22 @@
         <div id="carouselExample" class="carousel slide">
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img class="img-fluid" src="../img/legendaria1.jpg" class="d-block w-100" alt="...">
+                <img class="img-fluid" src="../img/legendaria1.jpg" class="d-block w-100" alt="moto legendaria">
               </div>
               <div class="carousel-item">
-                <img class="img-fluid" src="../img/legendaria2.jpg" class="d-block w-100" alt="...">
+                <img class="img-fluid" src="../img/legendaria2.jpg" class="d-block w-100" alt="moto legendaria">
               </div>
               <div class="carousel-item">
-                <img class="img-fluid" src="../img/legendaria3.jpg" class="d-block w-100" alt="...">
+                <img class="img-fluid" src="../img/legendaria3.jpg" class="d-block w-100" alt="moto legendaria">
               </div>
               <div class="carousel-item">
-                <img class="img-fluid" src="../img/legendaria4.jpg" class="d-block w-100" alt="...">
+                <img class="img-fluid" src="../img/legendaria4.jpg" class="d-block w-100" alt="moto legendaria">
               </div>
               <div class="carousel-item">
-                <img class="img-fluid" src="../img/legendaria5.jpg" class="d-block w-100" alt="...">
+                <img class="img-fluid" src="../img/legendaria5.jpg" class="d-block w-100" alt="moto legendaria">
               </div>
               <div class="carousel-item">
-                <img class="img-fluid" src="../img/legendaria6.jpg" class="d-block w-100" alt="...">
+                <img class="img-fluid" src="../img/legendaria6.jpg" class="d-block w-100" alt="moto legendaria">
               </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
@@ -193,6 +198,17 @@
 
 
    
+
+    <div>
+
+        <footer>
+            <div>
+                <img class="logofooter" src="../img/Kawalovers K.L..png" alt="Logo de la pagina">
+                <p class="derechoreservado">Kawalovers derechos reservadoss</p>
+            </div>
+        </footer>
+
+    </div>
 
 
 
